--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Invoice Generator</title>
 </head>
 <body>
-    
+    <main class="container">
+        <header id="header">
+            <h1 style="font-size: 40px; font-weight: 800; text-align: center; line-height: 40px; letter-spacing: -0.02em;">Invoice creator</h1>
+            <p style="font-size:16px; text-align: center;">Thank you for choosing GoodCorp, LLC!</p>
+        </header>
+        <div class="buttons-container">
+            <button class="button">Wash Car: $10</button>
+            <button class="button">Mow Lawn: $20</button>
+            <button class="button">Pull Weeds: $30</button>
+        </div>
+    </main>
 </body>
 </html>
