added: unordered list

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             <button class="button">Mow Lawn: $20</button>
             <button class="button">Pull Weeds: $30</button>
         </div>
+        <div id="list-title" style="width: 100%; display: flex; justify-content: space-between;">
+            <h2>TASK</h2>
+            <h2>TOTAL</h2>
+        </div>
+        <ul id="items"></ul>
     </main>
 </body>
 </html>
