linked script.js

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <h2>TOTAL</h2>
         </div>
         <ul id="items"></ul>
+
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
