fixed: mail icon

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p id="total-cost" style="font-size: 36px">$0</p>
         </div>
         <div class="reset-btn-container">
-            <button id="reset-btn"><img src="static/mail.png" alt="mail icon" style="margin-right: 10px;">Send Invoice</button>
+            <button id="reset-btn"><img src="icons/mail.png" alt="mail icon" style="margin-right: 10px;">Send Invoice</button>
         </div>
 
     </main>
